...
            android:textSize="@dimen/twentyfoursp_textsize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

        <TextView
            android:id="@+id/welcomeMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/welcomemessage_margin"
            android:paddingStart="5dp"
            android:text="@string/all_categories"
            android:textSize="@dimen/welome_message_textsize"
...
