...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lowerTitle" />

    <Button
        android:id="@+id/orderNowButton"
        android:layout_width="246dp"
        android:layout_height="36dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:text="Order Now"
        android:textSize="14sp"
...
